--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,23 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Results Files
+*.dot
+*.jpg
+*.jpeg
+*.csv
+*.bmp
+
+# Input Files
+*.md
+*TOPOLOGY*
+*Enterprise*
+
+# others
+*.html
+*.eps
+*/build/*
+algsFossi/Java Algorithms and Clients_files/*
+
+
