Changed gitignore do exclude backup files from commit

--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,8 @@ hs_err_pid*
 # others
 *.html
 *.eps
-*/build/*
-algsFossi/Java Algorithms and Clients_files/*
+build
+Java Algorithms and Clients_files
+backdir
 
 
